k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sodep-finance
  labels:
    app: sodep-finance
spec:
  selector:
    app: sodep-finance
  ports:
    - name: http
      port: 80
      targetPort: http
